fix: no text shifting due to icon now

--- a/MyX/src/app.css
+++ b/MyX/src/app.css
@@ -9,3 +9,9 @@ body {
   font-family: var(--font-jersey);
   overflow-x: hidden;
 }
+
+iconify-icon {
+  display: inline-block;
+  width: 1em;
+  height: 1em;
+}
